--- a/gaston-files/index.html
+++ b/gaston-files/index.html
@@ -9,6 +9,7 @@
 <link href="bundle.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<script src="bundle.js" type="text/javascript"></script>
+  <div id="main-app"></div>
+  <script src="bundle.js" type="text/javascript"></script>
 </body>
 </html>
